# protocol-gateway-sandbox

./: .gitignore  README.md  vercel.json
cli/: run.mjs
dashboard/: Cargo.toml  Trunk.toml  check_output.txt  index.html  styles.css
dashboard/src/: lib.rs
docs/: ARCHITECTURE.md  SECURITY.md  hardware-setup.md
guest/: Cargo.toml  build_errors.txt  errors.txt
guest/src/: lib.rs  metrics.rs  metrics_impl.rs
guest/src/modbus/: frame.rs  function.rs  mod.rs
guest/src/mqtt/: mod.rs  payload.rs
host/: package.json  protocol-gateway-guest.d.ts  protocol-gateway-guest.js  runtime.js
host/interfaces/: gateway-protocols-metrics.d.ts  gateway-protocols-modbus-source.d.ts  gateway-protocols-mqtt-sink.d.ts
host/shim/: chaos-attacks.js  modbus-source.js  mqtt-sink.js
host/test/: fuzz.test.js
legacy/: requirements.txt  vulnerable_gateway.py
wit/: world.wit
